Removendo o AuthenticationProvider.